version/0.19/_sources/api/solver/_autosummary/settings/particle_species.rst.txt
:orphan:

.. _particle_species:

particle_species
================

.. autoclass:: ansys.fluent.core.solver.settings_241.particle_species.particle_species
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`droplet_particle_child <droplet_particle_child>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`species <species_4>`       'species' child.

==========================   ====================

