version/0.28/_sources/api/solver/_autosummary/settings/particle_species.rst.txt
:orphan:

.. _particle_species:

particle_species
================

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.particle_species
    :show-inheritance:

.. rubric:: Methods

========================================   =========================================

Method                                                                       Summary

========================================   =========================================
:ref:`create <create_1>`                                 Create an instance of this.

:ref:`delete <delete_1>`                                    Delete selected objects.

:ref:`rename <rename>`                                            Rename the object.

:ref:`list <list>`                                    List the names of the objects.

:ref:`list_properties <list_properties>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                        Create a copy of the object.

========================================   =========================================

.. rubric:: Named object type

:ref:`particle_species_child <particle_species_child>`


.. rubric:: Included in:

============================   =====================================

Parent                                                       Summary

============================   =====================================
:ref:`species_4 <species_4>`       Specify particle mixture species.

============================   =====================================

